ChangeLog for PatchCableMgr


////////////////////////////////////////////////////
****************************************************

Contents
    - Changes Since 0.1.0

****************************************************
\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\

**Changes since 0.1.0

[Fix]	Resolved errors when creating connectable template
[Info]	Initial release