@@ -3,5 +3,6 @@
 define('AVAILABLE_CABLE_END_ID_COUNT', 100);
 define('MAX_WALLJACK_PORTID', 100);
 define('DEFAULT_FLOORPLAN_IMG', 'floorplan-default.png');
+define('PCM_VERSION', '0.1.0');
 
 ?>
